feat: add /r redirect for Reddit profile tracking

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
   "framework": "vite",
   "redirects": [
     {
+      "source": "/r",
+      "destination": "/?utm_source=reddit&utm_medium=profile&utm_campaign=bio",
+      "permanent": false
+    },
+    {
       "source": "/:path*",
       "has": [{"type": "host", "value": "dezygn.com"}],
       "destination": "https://www.dezygn.com/:path*",
